# semex_v3

./: .gitignore  pyproject.toml  train.sh
data/: conversations.json
notebooks/: explore_dataset.ipynb  test_vllm.ipynb
src/semex_v3/: __init__.py  config.py  data.py  finetune.py  setup_data.py
