[project]
name = "semex-v3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Felix Neumann", email = "felix.maximilian.neumann@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.5.2",
    "datasets>=3.4.1",
    "deepspeed>=0.16.4",
    "loguru>=0.7.3",
    "qwen-vl-utils>=0.0.10",
    "transformers>=4.50.0",
    "wandb>=0.19.8",
]

[project.scripts]
semex-v3 = "semex_v3:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
local = [
    "torch>=2.6.0",
]
